test/error/error.input86.zc
Function definition not at global level on line 3
